--- a/mathml.html
+++ b/mathml.html
@@ -6,16 +6,17 @@
        </title>
        <meta charset="UTF-8" />
        <link rel="stylesheet" type="text/css" href="stiloblig2.css" />
+       <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css" />  
     </head>
     <body>       
         <header>
             <h1>Studiewebsted</h1>   
             <nav>
                 <ul> 
-                    <li> <a href="index.html"> Hjem </a></li>
-                    <li> <a href="mathml.html"> MathML </a> </li>
-                    <li> <a href="svg.html"> SVG </a> </li>
-                    <li> <a href="git.html"> Git </a> </li>
+                    <li> <a href="index.html">Hjem</a></li>
+                    <li> <a href="mathml.html">MathML</a> </li>
+                    <li> <a href="svg.html">SVG</a> </li>
+                    <li> <a href="git.html">Git</a> </li>
                 </ul>
             </nav>
         </header>
