--- a/om.html
+++ b/om.html
@@ -6,6 +6,7 @@
        </title>
        <meta charset="UTF-8" />
        <link rel="stylesheet" type="text/css" href="stiloblig2.css" />
+       <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css" />  
     </head>
     <body>       
         <header>
@@ -26,7 +27,13 @@
                 </header>
                 <article> 
                     <p>
-                        Under ser du .
+                        Planleggingen av nettsiden startet med at jeg googlet på ulike nettsider for inspirasjon.
+                        Etter det prøvde jeg å skissere opp en forside på papir. Men valgte senere
+                        å bruke programmet Pencil til å lage den endelige strukturskissen, eller wireframen.
+                        Det ble noen forandringer på nettsiden i forhold til strukturskissene, ettersom jeg fant 
+                        bedre løsninger. 
+                    <p>
+                        Strukturskissene for forsiden og for artikkelsidene ser du under. 
                     </p>
                     <img src="strukturskisse1.png" alt="Strukturskisse forside"/>
                     <img src="strukturskisse2.png" alt="Strukturskisse artikkelside"/>
@@ -36,7 +43,7 @@
         <footer> 
                 <ul>
                         <li> 
-                            <a href="oppgave3oblig2.html">Om denne siden</a>
+                            <a href="om.html">Om denne siden</a>
                         </li>
                 </ul>
         </footer>
