--- a/git.html
+++ b/git.html
@@ -6,6 +6,7 @@
        </title>
        <meta charset="UTF-8" />
        <link rel="stylesheet" type="text/css" href="stiloblig2.css" />
+       <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css" />  
     </head>
     <body>       
         <header>
