--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        </title>
        <meta charset="UTF-8" />
        <link rel="stylesheet" type="text/css" href="stiloblig2.css" />
-       <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css" />  
+       <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css" />  
     </head>
     <body>       
         <header>
@@ -137,6 +137,9 @@
                     <h2>Linkearkiv</h2>
                     <p> 
                         <a href="https://www.w3schools.com">W3schools</a>
+                        <i class="fa fa-external-link" aria-hidden="true"></i> <br />
+                        <a href="https://www.stackoverflow.com">Stack Overflow</a>
+                        <i class="fa fa-external-link" aria-hidden="true"></i>
                     </p>
             </section>
             <section id="info">
