--- a/om.html
+++ b/om.html
@@ -6,7 +6,7 @@
        </title>
        <meta charset="UTF-8" />
        <link rel="stylesheet" type="text/css" href="stiloblig2.css" />
-       <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css" />  
+       <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css" />  
     </head>
     <body>       
         <header>
@@ -37,6 +37,25 @@
                     </p>
                     <img src="strukturskisse1.png" alt="Strukturskisse forside"/>
                     <img src="strukturskisse2.png" alt="Strukturskisse artikkelside"/>
+                    <h2>Websider til inspirasjon</h2>
+                    <table>
+                        <tr>
+                            <th>Beskrivelse</th>
+                            <th>URL</th>
+                        </tr>
+                        <tr>
+                            <td>Webside for å lære webteknologi og webdesign</td>
+                            <td><a href="https://www.w3schools.com">W3Schools</a>  <i class="fa fa-external-link" aria-hidden="true"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Inspirasjon til webdesign</td>
+                            <td><a href="https://www.pinterest.com">Pinterest</a>  <i class="fa fa-external-link" aria-hidden="true"></i></td>
+                        </tr>
+                        <tr>
+                            <td>Bilder til inspirasjon/bakgrunnsbilde</td>
+                            <td><a href="https://www.unsplash.com">Unsplash</a>  <i class="fa fa-external-link" aria-hidden="true"></i></td>
+                        </tr>
+                    </table>
                 </article>
             </section>
         </main>
